# music_of_the_day

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: music_of_the_day.yml
configs/: sources.yaml
data/processed/emotion/: latest.json
data/processed/velocities/: 2025-12-23.txt
outputs/2025-12-23/: explanation.txt  music.mid
scripts/: run_daily.py
src/music_of_the_day/: pipeline.py
src/music_of_the_day/explain/: explanation.py
src/music_of_the_day/ingestion/: fetch_news.py  normalize.py
src/music_of_the_day/mapping/: music_intent.py  semantics_to_intent.py  semantics_to_music.py
src/music_of_the_day/music/: ensemble.py  midi_generator.py  render.py
src/music_of_the_day/music/renderers/: base.py  bass.py  percussion.py  piano.py  strings.py
src/music_of_the_day/semantics/: embed.py  emotion.py  features.py
src/music_of_the_day/semantics/storage/: emotion.py  rolling.py  velocity.py
tests/: test_ingestion.py  test_music.py  test_semantics.py
